Locking view to object not working #50564

Closed
opened 2017-01-31 15:25:21 +01:00 by John Nyquist · 28 comments

System Information
macOS 10.12.3 (16D32)
MacBook Pro (Retina, 15-inch, Early 2013)
NVIDIA GeForce GT 650M 1024 MB
Intel HD Graphics 4000 1536 MB

Blender Version
Broken: 2.78a
Worked: 2.49b

Short description of error
View locking against an object does not work in 2.78a. I happened to have 2.49b on my system as well so I did it there for a sanity check and it works fine. Per the 2.78 manual it should still work the way it used to:

Lock to Object
Lock to Object lets you define an object in the Object Data ID as the center of the view. In that case, the view can be rotated around or zoomed towards that central object, but not on translation, unless you translate that itself object. (This option is not available in a camera view).

Exact steps for others to reproduce the error
Open a new Blender file
Open Properties panel in 3D view
Under View->Lock to Object
Select the Cube
Translate your view (you should not be able to, but you can)

**System Information** macOS 10.12.3 (16D32) MacBook Pro (Retina, 15-inch, Early 2013) NVIDIA GeForce GT 650M 1024 MB Intel HD Graphics 4000 1536 MB **Blender Version** Broken: 2.78a Worked: 2.49b **Short description of error** View locking against an object does not work in 2.78a. I happened to have 2.49b on my system as well so I did it there for a sanity check and it works fine. Per the 2.78 manual it should still work the way it used to: Lock to Object Lock to Object lets you define an object in the Object Data ID as the center of the view. In that case, the view can be rotated around or zoomed towards that central object, but not on translation, unless you translate that itself object. (This option is not available in a camera view). **Exact steps for others to reproduce the error** Open a new Blender file Open Properties panel in 3D view Under View->Lock to Object Select the Cube Translate your view (you should not be able to, but you can)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JohnNyquist

Added subscriber: @JohnNyquist

Added subscriber: @zeauro

Added subscriber: @zeauro

When view is locked to object, view is centered to origin of choosen object.
Then, user is free to add an offset if it is less pertinent to see origin than a specific part of the model.
If created offset is not wanted, user can press Home Key to recenter view to origin of object.
Lock to Object is working because if object is moved, view follows it.

It is intended behaviour.

I did not find exact commit.
But I remember same reaction for locking to 3D Cursor. #45301

So this undocumented change should have happened at 2.75 or 2.74.

When view is locked to object, view is centered to origin of choosen object. Then, user is free to add an offset if it is less pertinent to see origin than a specific part of the model. If created offset is not wanted, user can press Home Key to recenter view to origin of object. Lock to Object is working because if object is moved, view follows it. It is intended behaviour. I did not find exact commit. But I remember same reaction for locking to 3D Cursor. #45301 So this undocumented change should have happened at 2.75 or 2.74.
Author

Please note, in my steps the object is never moved, on the view is translated. Thus not locked according to manual or previous version of blender.

Please note, in my steps the object is never moved, on the view is translated. Thus not locked according to manual or previous version of blender.
Author

Attached is a movie showing the behavior.

view_not_locking.mov

Attached is a movie showing the behavior. [view_not_locking.mov](https://archive.blender.org/developer/F443272/view_not_locking.mov)
Author

On a whim I connected a mouse up to my laptop. Using a mouse, the view locking works as expected. Using the trackpad the view locking does not work in 2.78a (but does work in 2.49b).

On a whim I connected a mouse up to my laptop. Using a mouse, the view locking works as expected. Using the trackpad the view locking does not work in 2.78a (but does work in 2.49b).

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo

In the manual description noted, view to object is not locked in view translation, only object translation.
"..... the view can be rotated around or zoomed towards that central object, but not on translation,...."

"but not on translation,"

The translation is locked only when you use the manipulator.
Seems to work accordingly for me.

Am I understanding what you said correctly?

In the manual description noted, view to object is not locked in view translation, only object translation. "..... the view can be rotated around or zoomed towards that central object, but not on translation,...." "but not on translation," The translation is locked only when you use the manipulator. Seems to work accordingly for me. Am I understanding what you said correctly?
Author

Did you see my video and my subsequent notes? It works if I use a MOUSE, but it does NOT work properly with the MacBook Pro's TRACKPAD.

Did you see my video and my subsequent notes? It works if I use a MOUSE, but it does NOT work properly with the MacBook Pro's TRACKPAD.

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2017-02-01 10:54:11 +01:00

As said, this is expected behavior (and missing update in manual, which is not so uncommon unfortunately). Thanks for the report anyway.

As said, this is expected behavior (and missing update in manual, which is not so uncommon unfortunately). Thanks for the report anyway.
Author

Bastien,

It works as described in the manual when done with a mouse. It does not work when using a trackpad.

Are you saying that the expected behavior is for it to work as described when using a mouse but to NOT work when using a trackpad?

Bastien, It works as described in the manual when done with a mouse. It does not work when using a trackpad. Are you saying that the expected behavior is for it to work as described when using a mouse but to NOT work when using a trackpad?

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Added subscriber: @brecht

Added subscriber: @brecht

@JohnNyquist d’ont know what to say… only have a touchpad here, but there should be absolutely no difference between mouse and touchpad… or this might be an OSX specific issue, iirc we did have several weird problems with Apple’s own fancy hardware in the past. Maybe @brecht can help here?

Also, did you try the latest build from our buildbot?

@JohnNyquist d’ont know what to say… only have a touchpad here, but there should be absolutely no difference between mouse and touchpad… or this might be an OSX specific issue, iirc we did have several weird problems with Apple’s own fancy hardware in the past. Maybe @brecht can help here? Also, did you try the latest build from [our buildbot](https://builder.blender.org/download)?
Author

FWIW it works in2.49b. I have not tried latest build from buildbot. I am traveling until Tue so I will try it next week. Since there is a work around this is low priority but I am happy to help resolve it upon return, just let me know how I can assist. BTW I agree that it seems reasonable to expect either approach to work.

FWIW it works in2.49b. I have not tried latest build from buildbot. I am traveling until Tue so I will try it next week. Since there is a work around this is low priority but I am happy to help resolve it upon return, just let me know how I can assist. BTW I agree that it seems reasonable to expect either approach to work.

The Apple trackpad sends different events like MOUSEPAN, and it may be that the code handling those is not the same. However testing with 2.78a, I could not find any difference between behavior of the mouse and trackpad.

Which operations exactly are you comparing? Shift + hold middle mouse button and shift + two finger trackpad pan?

For both mouse and tracked I can pan / rotate / zoom the view, to look at some specific part of the object. Then if I move the object (from the same 3D view or another one), the view remains locked to that (part of the) object. That may be different than 2.49, but it's by design as far as I know.

The Apple trackpad sends different events like `MOUSEPAN`, and it may be that the code handling those is not the same. However testing with 2.78a, I could not find any difference between behavior of the mouse and trackpad. Which operations exactly are you comparing? Shift + hold middle mouse button and shift + two finger trackpad pan? For both mouse and tracked I can pan / rotate / zoom the view, to look at some specific part of the object. Then if I move the object (from the same 3D view or another one), the view remains locked to that (part of the) object. That may be different than 2.49, but it's by design as far as I know.
Author

I am traveling without my laptop until Tuesday but I can assure you the behavior is different with mouse than trackpad. The mouse functions as expected.

I am traveling without my laptop until Tuesday but I can assure you the behavior is different with mouse than trackpad. The mouse functions as expected.
Author

Brecht, thank you for your patience I'm back home now.

Yes, I am comparing Shift + hold middle mouse button and shift + two finger trackpad pan with 2.78a.

  • When I use the mouse it works in 2.78a exactly the same as in 2.49b.
  • When I use the trackpad it acts like the object is not locked in 2.78a and works the same as the mouse in 2.49b.

This is using the built-in trackpad on the laptop.

Brecht, thank you for your patience I'm back home now. Yes, I am comparing Shift + hold middle mouse button and shift + two finger trackpad pan with 2.78a. - When I use the mouse it works in 2.78a exactly the same as in 2.49b. - When I use the trackpad it acts like the object is not locked in 2.78a and works the same as the mouse in 2.49b. This is using the built-in trackpad on the laptop.
Bastien Montagne removed their assignment 2017-02-17 15:20:05 +01:00

Then, the bug is with the mouse handling. not the trackpad one. Once again, you cannot compare that behavior with 2.49, nowadays you are allowed to pan (move) the view even when locked to an object (it is slightly different from regular view panning though, since center, pivot point of the view remains on the locked object).

And we need some OSX dev or user to be able to at least confirm that mouse behavior. For now, the issue reported can't be reproduced so far, and has been moved to the BF Blender: Unconfirmed project.
If 2 other people aren't able to redo the bug after 2 weeks, it will be closed.

Then, the bug is with the mouse handling. not the trackpad one. Once again, you cannot compare that behavior with 2.49, nowadays you are allowed to pan (move) the view even when locked to an object (it is slightly different from regular view panning though, since center, pivot point of the view remains on the locked object). And we need some OSX dev or user to be able to at least confirm that mouse behavior. For now, the issue reported can't be reproduced so far, and has been moved to the *BF Blender: Unconfirmed* project. If 2 other people aren't able to redo the bug after 2 weeks, it will be closed.
Author

Let's forget about 2.49, it seems to be distracting to the conversation instead of helping.

With 2.78b when I connect a mouse to my computer (and use the mouse) I get the expected behavior and I see the warning at the top that the view offset is locked.

When I use the trackpad, the locking does not work, it behaves as if the locking were not enabled.

To make sure I had a clean environment:

  • I created a new user account on my machine
  • I downloaded the latest blender from blender.org (2.78b)
  • I locked the view to the cube
Let's forget about 2.49, it seems to be distracting to the conversation instead of helping. With 2.78b when I connect a mouse to my computer (and use the mouse) I get the expected behavior and I see the warning at the top that the view offset is locked. When I use the trackpad, the locking does not work, it behaves as if the locking were not enabled. To make sure I had a clean environment: - I created a new user account on my machine - I downloaded the latest blender from blender.org (2.78b) - I locked the view to the cube

The "View offset is locked" message is shown for two operations:

  • View Pan with shift/control + scroll
  • View Dolly with shift + control + middle mouse drag

Are those the operations you're doing?

The inconsistency between view panning with the scroll wheel and holding down the middle mouse button could be fixed.

The "View offset is locked" message is shown for two operations: * View Pan with shift/control + scroll * View Dolly with shift + control + middle mouse drag Are those the operations you're doing? The inconsistency between view panning with the scroll wheel and holding down the middle mouse button could be fixed.

This issue was referenced by 3f5b2e2682

This issue was referenced by 3f5b2e268295083d9dddb9628b7b7aed39f3350a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

I unified the view panning code now so it behaves the same with scrolling and dragging the middle mouse button (and the trackpad). If there's other inconsistencies we'll need to know the specific operation done.

So far I see no evidence that there is a bug with the trackpad handling, as explained above it is intentional that you can still navigate with object locking. A bug would be if e.g. moving the object would not keep the view locked to the same part of the object.

I unified the view panning code now so it behaves the same with scrolling and dragging the middle mouse button (and the trackpad). If there's other inconsistencies we'll need to know the specific operation done. So far I see no evidence that there is a bug with the trackpad handling, as explained above it is intentional that you can still navigate with object locking. A bug would be if e.g. moving the object would not keep the view locked to the same part of the object.
Author

Great, thanks for improving the consistency! I remember Ton mentioning the importance of ui consistency in his 2015 conference keynote, it is appreciated.

Great, thanks for improving the consistency! I remember Ton mentioning the importance of ui consistency in his 2015 conference keynote, it is appreciated.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50564
No description provided.