Fix T50564: 3D view panning with scroll wheel inconsistent with dragging.